--- a/DynamoDB/AWS_tutorial/package.json
+++ b/DynamoDB/AWS_tutorial/package.json
@@ -1,20 +1,36 @@
 {
 
   "type": "module",
+
   "name": "aws_tutorial",
+
   "version": "1.0.0",
+
   "description": "",
+
   "main": "addItem.js",
 
   "scripts": {
+
     "test": "echo \"Error: no test specified\" && exit 1"
+
   },
+
   "keywords": [],
+
   "author": "",
+
   "license": "ISC",
+
   "dependencies": {
 
-    "@aws-sdk/client-dynamodb": "^3.154.0"
+    "@aws-sdk/client-dynamodb": "^3.154.0",
+
+    "@aws-sdk/util-dynamodb": "^3.160.0",
+
+    "aws-sdk": "^2.1204.0"
 
   }
+
 }
+
